--- a/README.rdoc
+++ b/README.rdoc
@@ -1,2 +1,10 @@
-==Hamming Code==
-Armaan BindraⒸ
+Hamming
+=======
+
+© Armaan Bindra, Fall 2013
+
+C++ Hamming code generator project for the Hardware Design course at St. Olaf.
+
+===========
+
+This program takes in a hexidecimal number and computes its Hamming code.
